--- a/views/Head.ejs
+++ b/views/Head.ejs
@@ -3,15 +3,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Blackflame576</title>
-    <link rel="stylesheet" href="CSS/MainStyles.css" type="text/css">
-    <link rel="icon" type="image/x-icon" href="Images/Logo.png">
-    <link rel="stylesheet" href="Bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/CSS/MainStyles.css" type="text/css">
+    <link rel="icon" type="image/x-icon" href="/static/Images/Logo.png">
+    <link rel="stylesheet" href="/static/Bootstrap/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/static/froalacss">
+    <script src="/static/froalajs"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
-    <script src="JS/jquery-3.6.4.js"></script>
-    <script src="JS/jquery.mCustomScrollbar.concat.min.js"></script>
-    <script src="JS/popper.min.js" ></script>
-    <script src="JS/infinite-scroll.pkgd.min.js"></script>
-    <script src="JS/Sidebar.js"></script>
+    <script src="/static/JS/jquery-3.6.4.js"></script>
+    <script src="/static/JS/jquery.mCustomScrollbar.concat.min.js"></script>
+    <script src="/static/JS/popper.min.js" ></script>
+    <script src="/static/JS/infinite-scroll.pkgd.min.js"></script>
+    <script src="/static/JS/Sidebar.js"></script>
 </head>
